hphp/hack/test/typecheck/function_pointer/reified_targs_missing.php
<?hh

function foo<reify T>(T $a): void {
}

function test(): void {
  $x = foo<>;
}
